--- a/1.6/incomplete.html
+++ b/1.6/incomplete.html
@@ -1,26 +1,72 @@
+<!DOCTYPE HTML>
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="../styles/common.css" media="screen"/>
-		<body>
-				<div id="head">
-			<span class="head"><a href="https://github.com/sukar42/LAST_DAYS"></a></span>
-		</div>
-		<h2><ul>This is a list of bugs, and needed items based on lore inconsistencies.</h2><br>
-<ul><li><u><strong>LAST DAYS for Minecraft 1.6</strong></u></li></ul>
-<ul>
-<ul><li>The Horse textures need more detail.</li><li>The missing 1.6 sounds need to be made.</li><li>The splashes need to be more Last Days like.</li><li>The Underlava.png needs made (when under lava, it is red not green).-partly finished</li><li>The broken leaf particles color do not show post custom colors.</li></ul></li></ul>
-<ul><br>
-<li><u><strong>LAST DAYS for Minecraft 1.7</strong></u></li></ul>
-<ul>
-<ul><li>The missing 1.7 sounds need to be made.</li></ul></li></ul>
-<ul><br>
-<li><u><strong>LAST DAYS for Minecraft 1.8</strong></u></li></ul>
-<ul>
-<ul><li>Rabbits need more detail.</li><li>Banners need to be more Last Days like.</li><li>banner_base (item) needs to be more Last Days like.</li><li>banner_overlay needs to be more Last Days like.</li><li>The missing 1.8 sounds need to be made.</li><li>The Enchanting Table Gui needs fixed.</li><li>Alex needs her own skin.</li></ul></li></ul><br>
-<ul>
-<li><u><strong>LAST DAYS Remastered for use with Minecraft 1.8, and MCpatcher.</strong></u>
-<ul><li>still needs a lang file fix</li></ul><br>
-<li><u><strong>LAST DAYS for Minecraft 1.9</strong></u></li></ul><br>
-<ul>
-<li><u><strong>LAST DAYS Remastered for use with Minecraft 1.9, and MCpatcher.</strong></u><br><br>
-<strong>These bugs fall to the next version!</strong>-(This List is far from complete please let us know on the <a href="http://www.minecraftforum.net/forums/mapping-and-modding/resource-packs/1240079">Minecraft Forum Thread</a> if you find a bug or missing textures not listed above).</div><br> 
+		<link rel="stylesheet" type="text/css" href="../styles/common.css" media="screen">
+  </head>
+  <body>
+    <div id="head">
+      <span class="head"><a href="https://github.com/sukar42/LAST_DAYS"></a></span>
+    </div>
+    <div class="page">
+    <h2>This is a list of bugs and needed items based on lore inconsistencies.</h2>
+    <div class="line"></div>
+    <ul class="outer">
+      <li><span class="header">LAST DAYS for Minecraft 1.6</span>
+      <ul class="inner">
+        <li>The Horse textures need more detail.</li>
+        <li>The missing 1.6 sounds need to be made.</li>
+        <li>The splashes need to be more Last Days like.</li>
+        <li>The Underlava.png needs made (when under lava, it is red not green).-partly finished</li>
+        <li>The broken leaf particles color do not show post custom colors.</li>
+      </ul></li>
+      <li><span class="header">LAST DAYS for Minecraft 1.7</span>
+      <ul class="inner">
+        <li>The missing 1.7 sounds need to be made.</li>
+      </ul></li>
+      <li><span class="header">LAST DAYS for Minecraft 1.8</span>
+      <ul class="inner">
+        <li>Rabbits need more detail.</li>
+        <li>Banners need to be more Last Days like.</li>
+        <li>banner_base (item) needs to be more Last Days like.</li>
+        <li>banner_overlay needs to be more Last Days like.</li>
+        <li>The missing 1.8 sounds need to be made.</li>
+        <li>The Enchanting Table Gui needs fixed.</li>
+        <li>Alex needs her own skin.</li>
+      </ul></li>
+      <li><span class="header">LAST DAYS Remastered for use with Minecraft 1.8, and MCpatcher.</span>
+      <ul class="inner">
+        
+      </ul></li>
+      <li><span class="header">LAST DAYS for Minecraft 1.9</span>
+      <ul class="inner">
+        <li>Add offhand slot to PIM (Survival and Creative) and HUD</li>
+        <li>Potion effect icon</li>
+        <li>Levitation effect icon</li>
+        <li>Glowing effect icon</li>
+        <li>Shulkers (Textures and lore)</li>
+        <li>Purpur blocks</li>
+        <li>End Stone Bricks</li>
+        <li>Chorus plants</li>
+        <li>End Rods</li>
+        <li>Grass Paths</li>
+        <li>Spectral Arrows</li>
+        <li>Potion Arrows</li>
+        <li>Beetroot</li>
+        <li>Lingering potions</li>
+        <li>Dragon's breath</li>
+        <li>Shields (Full banner re-do)</li>
+        <li>New command blocks</li>
+        <li>Brown heart (mob damage)</li>
+        <li>Zombie Villager skins</li>
+        <li>Lang file updates</li>
+      </ul></li>
+      <li><span class="header">LAST DAYS Remastered for use with Minecraft 1.9, and MCpatcher.</span>
+      <ul class="inner">
+        
+      </ul></li>
+    </ul>
+    <h4>These bugs fall to the next version!</h4>
+    <p>(This list is far from complete, so please let us know on the <a href="http://www.minecraftforum.net/forums/mapping-and-modding/resource-packs/1240079">Minecraft Forum Thread</a> if you find a bug or missing textures not listed above).</p>
+    </div>
+  </body>
+</html>
