--- a/1.6/incomplete.html
+++ b/1.6/incomplete.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <div id="head">
-      <span class="head"><a href="https://github.com/sukar42/LAST_DAYS"></a></span>
+      <span class="head"><a href=".."></a></span>
     </div>
     <div class="page">
     <h2>This is a list of bugs and needed items based on lore inconsistencies.</h2>
