--- a/1.6/incomplete.html
+++ b/1.6/incomplete.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="../styles/common.css" media="screen">
+    <title>Project Checklist</title>
   </head>
   <body>
     <div id="head">
@@ -13,58 +14,61 @@
     <ul class="outer">
       <li><span class="header">LAST DAYS for Minecraft 1.6</span>
       <ul class="inner">
-        <li>The Horse textures need more detail.</li>
-        <li>The missing 1.6 sounds need to be made.</li>
-        <li>The splashes need to be more Last Days like.</li>
-        <li>The Underlava.png needs made (when under lava, it is red not green).-partly finished</li>
-        <li>The broken leaf particles color do not show post custom colors.</li>
+        <li>The Horse textures need more detail. (T)</li>
+        <li>The missing 1.6 sounds need to be made. (S)</li>
+        <li>The splashes need to be more Last Days like. (O)</li>
+        <li>The Underlava.png needs made (when under lava, it is red not green)&mdash;partly finished (T)</li>
+        <li>The broken leaf particles color do not show post custom colors. (O)</li>
       </ul></li>
       <li><span class="header">LAST DAYS for Minecraft 1.7</span>
       <ul class="inner">
-        <li>The missing 1.7 sounds need to be made.</li>
+        <li>The missing 1.7 sounds need to be made. (S)</li>
       </ul></li>
       <li><span class="header">LAST DAYS for Minecraft 1.8</span>
       <ul class="inner">
-        <li>Rabbits need more detail.</li>
-        <li>Banners need to be more Last Days like.</li>
-        <li>banner_base (item) needs to be more Last Days like.</li>
-        <li>banner_overlay needs to be more Last Days like.</li>
-        <li>The missing 1.8 sounds need to be made.</li>
-        <li>The Enchanting Table Gui needs fixed.</li>
-        <li>Alex needs her own skin.</li>
+        <li>Rabbits need more detail. (T)</li>
+        <li>Banners need to be more Last Days like. (T)</li>
+        <li>banner_base (item) needs to be more Last Days like. (T)</li>
+        <li>banner_overlay needs to be more Last Days like. (T)</li>
+        <li>The missing 1.8 sounds need to be made. (S)</li>
+        <li>The Enchanting Table Gui needs fixed. (T)</li>
+        <li>Alex needs her own skin. (T)</li>
       </ul></li>
       <li><span class="header">LAST DAYS Remastered for use with Minecraft 1.8, and MCpatcher.</span>
       <ul class="inner">
-        
+        <li>Are we finished?</li>
       </ul></li>
       <li><span class="header">LAST DAYS for Minecraft 1.9</span>
       <ul class="inner">
-        <li>Add offhand slot to PIM (Survival and Creative) and HUD</li>
-        <li>Potion effect icon</li>
-        <li>Levitation effect icon</li>
-        <li>Glowing effect icon</li>
-        <li>Shulkers (Textures and lore)</li>
-        <li>Purpur blocks</li>
-        <li>End Stone Bricks</li>
-        <li>Chorus plants</li>
-        <li>End Rods</li>
-        <li>Grass Paths</li>
-        <li>Spectral Arrows</li>
-        <li>Potion Arrows</li>
-        <li>Beetroot</li>
-        <li>Lingering potions</li>
-        <li>Dragon's breath</li>
-        <li>Shields (Full banner re-do)</li>
-        <li>New command blocks</li>
-        <li>Brown heart (mob damage)</li>
-        <li>Zombie Villager skins</li>
-        <li>Lang file updates</li>
+        <li>Add offhand slot to PIM (Survival and Creative) and HUD (T)</li>
+        <li>Potion effect icon (T)</li>
+        <li>Levitation effect icon (T)</li>
+        <li>Glowing effect icon (T)</li>
+        <li>Shulkers (T, L)</li>
+        <li>Purpur blocks (T, L)</li>
+        <li>End Stone Bricks (T)</li>
+        <li>Chorus plants (T,L)</li>
+        <li>End Rods (T,L)</li>
+        <li>Grass Paths (T)</li>
+        <li>Spectral Arrows (T,L)</li>
+        <li>Potion Arrows (T,L)</li>
+        <li>Beetroot (T,L)</li>
+        <li>Lingering potions (T)</li>
+        <li>Dragon's breath (T,L)</li>
+        <li>Shields (Full banner re-do) (T)</li>
+        <li>New command blocks (T)</li>
+        <li>Brown heart (mob damage) (T)</li>
+        <li>Zombie Villager skins (T)</li>
+        <li>Lang file updates (O)</li>
       </ul></li>
       <li><span class="header">LAST DAYS Remastered for use with Minecraft 1.9, and MCpatcher.</span>
       <ul class="inner">
-        
+        <li>On hold until full release</li>
       </ul></li>
     </ul>
+    <p>
+      In total, 27 texture jobs (T), 4 sound jobs (S), 8 lore items (L), and 3 other items (O) are on the checklist. (Roughly)
+    </p>
     <h4>These bugs fall to the next version!</h4>
     <p>(This list is far from complete, so please let us know on the <a href="http://www.minecraftforum.net/forums/mapping-and-modding/resource-packs/1240079">Minecraft Forum Thread</a> if you find a bug or missing textures not listed above).</p>
     </div>
