optifine is now the main mod

--- a/index.html
+++ b/index.html
@@ -28,13 +28,17 @@
 					<ul class="inner">
             <li>There are <strong>20+</strong> things left to do for<strong> Last Days 1.9</strong>. <a href="1.6/incomplete.html">Click here</a> for more info.</li>
 					</ul></li>
-				<li><a href="PE/index.html">LAST DAYS for Minecraft PE</a>
+					<li><a href="1.10/index.html">LAST DAYS for Minecraft 1.10</a>
 					<ul class="inner">
-            <li>There are <strong>50+</strong> things left to do for<strong> Last Days PE</strong>. <a href="1.6/incomplete.html">Click here</a> for more info.</li>
+            <li>There are <strong>?</strong> things left to do for<strong> Last Days 1.10</strong>. <a href="1.6/incomplete.html">Click here</a> for more info.</li>
 					</ul></li>
-				<li><a href="Modpack/index.html">The LAST DAYS Modpack for 1.8.x</a>
+				<li><a href="PE/index.html">LAST DAYS for Minecraft PE/Windows 10.</a>
 					<ul class="inner">
-            <li>There are <strong>50+</strong> things left to do for<strong> Last Days Modpack</strong>. <a href="1.6/incomplete.html">Click here</a> for more info.</li>
+            <li>There are <strong>?</strong> things left to do for<strong> Last Days PE/Windows 10</strong>. <a href="1.6/incomplete.html">Click here</a> for more info.</li>
+					</ul></li>
+				<li><a href="Modpack/index.html">The LAST DAYS Modpacks</a>
+					<ul class="inner">
+            <li>There are <strong>?</strong> things left to do for<strong> Last Days Modpack</strong>. <a href="1.6/incomplete.html">Click here</a> for more info.</li>
 					</ul></li>
 			</ul>
     </div>
