--- a/1.6/incomplete.html
+++ b/1.6/incomplete.html
@@ -44,14 +44,11 @@
         <li>Levitation effect icon (T)</li>
         <li>Glowing effect icon (T)</li>
         <li>Shulkers (T, L)</li>
-        <li>Purpur blocks (T, L)</li>
-        <li>End Stone Bricks (T)</li>
+        <li>End Stone Bricks (T)-Finished</li>
         <li>Chorus plants (T,L)</li>
         <li>End Rods (T,L)</li>
-        <li>Grass Paths (T)</li>
         <li>Spectral Arrows (T,L)</li>
         <li>Potion Arrows (T,L)</li>
-        <li>Beetroot (T,L)</li>
         <li>Lingering potions (T)</li>
         <li>Dragon's breath (T,L)</li>
         <li>Shields (Full banner re-do) (T)</li>
@@ -60,12 +57,20 @@
         <li>Zombie Villager skins (T)</li>
         <li>Lang file updates (O)</li>
       </ul></li>
-      <li><span class="header">LAST DAYS Remastered for use with Minecraft 1.9, and MCpatcher.</span>
+      <li><span class="header">LAST DAYS Remastered for use with Minecraft 1.9, and optifine.</span>
       <ul class="inner">
         <li>On hold until full release</li>
 	  </ul></li>
-      <li><span class="header">LAST DAYS for use with Minecraft PE</span>
+      <li><span class="header">LAST DAYS for Minecraft 1.10</span>
       <ul class="inner">
+        <li>place holder</li>
+      </ul></li>
+      <li><span class="header">LAST DAYS Remastered for use with Minecraft 1.10, and optifine.</span>
+      <ul class="inner">
+        <li>On hold until full release</li>
+	  </ul></li>
+      <li><span class="header">LAST DAYS for use with Minecraft PE/Windows 10.</span>
+	  <ul class="inner">
 	    <li>On hold until full release of 1.9</li>
       </ul></li>
       <li><span class="header">LAST DAYS Mod Pack for use with Minecraft 1.8.#</span>
@@ -74,7 +79,7 @@
       </ul></li>
     </ul>
     <p>
-      In total, 26 texture jobs (T), 4 sound jobs (S), 8 lore items (L), and 3 other items (O) are on the checklist. (Roughly)
+      In total, 26 te      <ul class="inner">xture jobs (T), 4 sound jobs (S), 8 lore items (L), and 3 other items (O) are on the checklist. (Roughly)
     </p>
     <h4>These bugs fall to the next version!</h4>
     <p>(This list is far from complete, so please let us know on the <a href="http://www.minecraftforum.net/forums/mapping-and-modding/resource-packs/1240079">Minecraft Forum Thread</a> if you find a bug or missing textures not listed above).</p>
