--- a/PE/index.html
+++ b/PE/index.html
@@ -9,14 +9,13 @@
 			<span class="head"><a href="https://github.com/sukar42/LAST_DAYS/"></a></span>
 		</div>
     <div class="page">
-      <h2>LAST DAYS for Minecraft PE</h2>
+      <h2>LAST DAYS for Minecraft PE/Windows 10.</h2>
       <div class="line"></div>
       <ul class="outer">
         <li><strong>Base</strong> <i>(<a href="LinkHere">Mediafire</a> - <a href="LinkHere">MEGA</a>) - ? MB</i>
 				<ul class="inner">
           <li><i>Still incomplete. Click <a href="../1.6/incomplete.html">here</a> to see what still needs to be done. If you wish to help maintain/update the pack, visit the official <a href="http://www.minecraftforum.net/forums/mapping-and-modding/resource-packs/1240079">Minecraft Forum Thread</a> and discuss it there.</i></li>
-          <li><i>Contains textures, sound effects, language files, and texts (end credits, splashes)</i></li>
-          <li class="warning"><i>Requires either <a href="http://www.minecraftforum.net/forums/mapping-and-modding/resource-packs/1226351">MCPatcher</a> or <a href="http://www.minecraftforum.net/forums/mapping-and-modding/minecraft-mods/1272953">Optifine</a> for the full experience.</i></li>
+          <li><i>?Contains textures, sound effects, language files, and texts (end credits, splashes)?</i></li>
 			</ul></li>
 		</ul>
 	</body>
