--- a/index.html
+++ b/index.html
@@ -14,32 +14,20 @@
 			<ul class="outer">
 				<li><a href="1.6/index.html">LAST DAYS for Minecraft 1.6</a>
 					<ul class="inner">
-            <li>Want to help complete the pack? There are <strong>6</strong> things left to do for<strong> Last Days 1.6</strong>. <a href="1.6/incomplete.html">Click here</a> for more info.</li>
+            <li>Want to help complete the pack? Join us on <a href="https://discord.gg/4hccsbP">Discord</a>. There are a few things left to do for<strong> Last Days 1.6</strong>. <a href="1.6/incomplete.html">Click here</a> for more info.</li>
 					</ul></li>
 				<li><a href="1.7/index.html">LAST DAYS for Minecraft 1.7</a>
 					<ul class="inner">
-            <li>There are <strong>2</strong> things left to do for<strong> Last Days 1.7</strong>. <a href="1.6/incomplete.html">Click here</a> for more info.</li>
+            <li>Join us on <a href="https://discord.gg/4hccsbP">Discord</a>. There are a few things left to do for<strong> Last Days 1.7</strong>. <a href="1.6/incomplete.html">Click here</a> for more info.</li>
 					</ul></li>
 				<li><a href="1.8/index.html">LAST DAYS for Minecraft 1.8</a>
 					<ul class="inner">
-            <li>There are <strong>8</strong> things left to do for<strong> Last Days 1.8</strong>. <a href="1.6/incomplete.html">Click here</a> for more info.</li>
+            <li>Join us on <a href="https://discord.gg/4hccsbP">Discord</a>. There are a few things left to do for<strong> Last Days 1.8</strong>. <a href="1.6/incomplete.html">Click here</a> for more info.</li>
 					</ul></li>
 				<li><a href="1.9/index.html">LAST DAYS for Minecraft 1.9</a>
 					<ul class="inner">
-            <li>There are <strong>20+</strong> things left to do for<strong> Last Days 1.9</strong>. <a href="1.6/incomplete.html">Click here</a> for more info.</li>
-					</ul></li>
-					<li><a href="1.10/index.html">LAST DAYS for Minecraft 1.10</a>
-					<ul class="inner">
-            <li>There are <strong>?</strong> things left to do for<strong> Last Days 1.10</strong>. <a href="1.6/incomplete.html">Click here</a> for more info.</li>
-					</ul></li>
-				<li><a href="PE/index.html">LAST DAYS for Minecraft PE/Windows 10.</a>
-					<ul class="inner">
-            <li>There are <strong>?</strong> things left to do for<strong> Last Days PE/Windows 10</strong>. <a href="1.6/incomplete.html">Click here</a> for more info.</li>
-					</ul></li>
-				<li><a href="Modpack/index.html">The LAST DAYS Modpacks</a>
-					<ul class="inner">
-            <li>There are <strong>?</strong> things left to do for<strong> Last Days Modpack</strong>. <a href="1.6/incomplete.html">Click here</a> for more info.</li>
-					</ul></li>
+            <li>Join us on <a href="https://discord.gg/4hccsbP">Discord</a>. There are a few things left to do for<strong> Last Days 1.9</strong>. <a href="1.6/incomplete.html">Click here</a> for more info.</li>
+					<ul></li>
 			</ul>
     </div>
 	</body>
