--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
 				<li><a href="1.9/index.html">LAST DAYS for Minecraft 1.9</a>
 					<ul class="inner">
             <li>Join us on <a href="https://discord.gg/4hccsbP">Discord</a>. There are a few things left to do for<strong> Last Days 1.9</strong>. <a href="1.6/incomplete.html">Click here</a> for more info.</li>
+					</ul></li>
+			    <li><a href="1.11/index.html">LAST DAYS for Minecraft 1.11</a>
+					<ul class="inner">
+            <li>Join us on <a href="https://discord.gg/4hccsbP">Discord</a>. There are a few things left to do for<strong> Last Days 1.9</strong>. <a href="1.6/incomplete.html">Click here</a> for more info.</li>
 					<ul></li>
 			</ul>
     </div>
