--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
 					<ul class="inner">
             <li>There are <strong>?</strong> things left to do for<strong> Last Days 1.10</strong>. <a href="1.6/incomplete.html">Click here</a> for more info.</li>
 					</ul></li>
+				<li><a href="1.11/index.html">LAST DAYS for Minecraft 1.11/1.12</a>
+					<ul class="inner">
+            <li>There are <strong>?</strong> things left to do for<strong> Last Days 1.11/1.12</strong>. <a href="1.6/incomplete.html">Click here</a> for more info.</li>
+					</ul></li>
 				<li><a href="PE/index.html">LAST DAYS for Minecraft PE/Windows 10.</a>
 					<ul class="inner">
             <li>There are <strong>?</strong> things left to do for<strong> Last Days PE/Windows 10</strong>. <a href="1.6/incomplete.html">Click here</a> for more info.</li>
