--- a/1.11/index.html
+++ b/1.11/index.html
@@ -17,7 +17,7 @@
           <li><i>Still incomplete. Click <a href="../1.6/incomplete.html">here</a> to see what still needs to be done. If you wish to help maintain/update the pack, visit the official <a href="http://www.minecraftforum.net/forums/mapping-and-modding/resource-packs/1240079">Minecraft Forum Thread</a> and discuss it there.</i></li>
           <li><i>Contains textures, sound effects, language files, and texts (end credits, splashes)</i></li>
           <li class="warning"><i>Requires <a href="http://optifine.net/downloads">Optifine</a> for the full experience.</i></li>
-          <li>Want the latest version and don't care if there's bugs? <a href="https://github.com/sukar42/LAST_DAYS/archive/1.9.zip">GitHub</a> (Note: You must extract the folder inside into the Resource Packs folder. You cannot use the zip directly.)</li>
+          <li>Want the latest version and don't care if there's bugs? <a href="https://github.com/Gwolfski/LAST_DAYS/tree/1.11">GitHub</a> (Note: You must extract the folder inside into the Resource Packs folder. You cannot use the zip directly.)</li>
 				</ul></li>
 			<li><strong>Music Add-On</strong> <i>(<a href="http://www.mediafire.com/download/wg99iu4w6adp07l/LAST_DAYS_(Music_Add-On).zip">Mediafire</a> - <a href="https://mega.co.nz/#!1dVSxYLD!VhAdn_bETmbqsg1pFmuv3f6GIXPDEK3ry4vE2JkszQY">MEGA</a>) - 103.75 MB</i>
       <ul class="inner">
