--- a/1.10/index.html
+++ b/1.10/index.html
@@ -9,7 +9,7 @@
 			<span class="head"><a href="https://github.com/sukar42/LAST_DAYS/"></a></span>
 		</div>
     <div class="page">
-      <h2>LAST DAYS for Minecraft 1.10</h2>
+      <h2>LAST DAYS for Minecraft 1.10, it sorta doesn't exist</h2>
       <div class="line"></div>
       <ul class="outer">
         <li><strong>Base</strong> <i>(<a href="LinkHere">Mediafire</a> - <a href="LinkHere">MEGA</a>) - ? MB</i>
