--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 					<ul class="inner">
             <li>There are <strong>?</strong> things left to do for<strong> Last Days Modpack</strong>. <a href="1.6/incomplete.html">Click here</a> for more info.</li>
 					</ul></li>
-	<li><a href="Archive/index.html">The LAST DAYS Archived content</a>
+	<li><a href="Archive/">The LAST DAYS Archived content</a>
 					<ul class="inner">
-            <li>Old, unused or forgotten files yet to be used are to be found here</li>
+            <li>Old, unused or forgotten files yet to be used are to be found here, includes mod textures</li>
 					</ul></li>
 			</ul>
     </div>
