--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<ul class="inner">
             <li>There are <strong>20+</strong> things left to do for<strong> Last Days 1.9</strong>. <a href="1.6/incomplete.html">Click here</a> for more info.</li>
 					</ul></li>
-					<li><a href="1.10/index.html">LAST DAYS for Minecraft 1.10</a>
+					<li><a href="1.10X/index.html">LAST DAYS for Minecraft 1.10</a>
 					<ul class="inner">
             <li>There are <strong>?</strong> things left to do for<strong> Last Days 1.10</strong>. <a href="1.6/incomplete.html">Click here</a> for more info.</li>
 					</ul></li>
