--- a/1.11/index.html
+++ b/1.11/index.html
@@ -24,6 +24,8 @@
 				<li>Contains only the <strong>music files</strong> for LAST DAYS. Separate due to size.</li>
 				<li>Music by <a href="http://teknoaxe.com/">TeknoAXE</a>. See credits <a href="../1.6/credits/music.html">here</a>.</li>
 			</ul></li>
-		</ul>
+	    </ul>
+	  <div class="line"></div>
+	    <li><strong>HOME</strong></li>
 	</body>
 </html>
