--- a/1.11/index.html
+++ b/1.11/index.html
@@ -26,6 +26,6 @@
 			</ul></li>
 	    </ul>
 	  <div class="line"></div>
-	    <li><strong><a href="http://sukar42.github.io/LAST_DAYS/">Home Page</a></strong></li>
+	    <ul class="outer"><li><strong><a href="http://sukar42.github.io/LAST_DAYS/">Home Page</a></strong></li></ul>
 	</body>
 </html>
