--- a/1.6/index.html
+++ b/1.6/index.html
@@ -36,6 +36,8 @@
             <li><strong><a title="Visit mod page" href="http://bit.ly/1aFgOkQ"		>Solar Apocalypse</a></strong> v4r4 [Complete] <i>(<a href="http://zl.mcf.li/rp/ld/1.6/mediafire/mods/solar_apocalypse.php">Mediafire</a> - <a href="http://zl.mcf.li/rp/ld/1.6/mega/mods/solar_apocalypse.php">MEGA</a>) - 293 KB</i></li>
           </ul></ul>
       </li></ul>
+	  <div class="line"></div>
+	    <ul class="outer"><li><strong><a href="http://sukar42.github.io/LAST_DAYS/">Home Page</a></strong></li></ul>
     </div>
 	</body>
 </html>
