--- a/1.8/index.html
+++ b/1.8/index.html
@@ -32,5 +32,7 @@
 				<li>Music by <a href="http://teknoaxe.com/">TeknoAXE</a>. See credits <a href="../1.6/credits/music.html">here</a>.</li>
 			</ul></li>
 		</ul>
+	  <div class="line"></div>
+	    <ul class="outer"><li><strong><a href="http://sukar42.github.io/LAST_DAYS/">Home Page</a></strong></li></ul>
 	</body>
 </html>
