--- a/1.9/index.html
+++ b/1.9/index.html
@@ -17,5 +17,7 @@
           <li><i>Still incomplete. </li> <a href="https://github.com/sukar42/LAST_DAYS/archive/1.9-Remastered.zip">GitHub</a>
 			</ul></li>
 		</ul>
+	  <div class="line"></div>
+	    <ul class="outer"><li><strong><a href="http://sukar42.github.io/LAST_DAYS/">Home Page</a></strong></li></ul>
 	</body>
 </html>
