--- a/ModpackX/index.html
+++ b/ModpackX/index.html
@@ -17,5 +17,7 @@
           <li><i>Still incomplete. Click <a href="../1.6/incomplete.html">here</a> to see what still needs to be done. If you wish to help maintain/update the pack, visit the official <a href="http://www.minecraftforum.net/forums/mapping-and-modding/resource-packs/1240079">Minecraft Forum Thread</a> and discuss it there.</i></li>
           <li><i>Contains "list of mods here"</i></li>
 		</ul>
+	  <div class="line"></div>
+	    <ul class="outer"><li><strong><a href="http://sukar42.github.io/LAST_DAYS/">Home Page</a></strong></li></ul>
 	</body>
 </html>
