--- a/PEX/index.html
+++ b/PEX/index.html
@@ -18,5 +18,7 @@
           <li><i>?Contains textures, sound effects, language files, and texts (end credits, splashes)?</i></li>
 			</ul></li>
 		</ul>
+	  <div class="line"></div>
+	    <ul class="outer"><li><strong><a href="http://sukar42.github.io/LAST_DAYS/">Home Page</a></strong></li></ul>
 	</body>
 </html>
