--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<ul class="inner">
             <li>There are <strong>?</strong> things left to do for<strong> Last Days PE/Windows 10</strong>. <a href="1.6/incomplete.html">Click here</a> for more info.</li>
 					</ul></li>
-				<li><a href="Modpack/index.html">The LAST DAYS Modpacks</a>
+				<li><a href="ModpackX/index.html">The LAST DAYS Modpacks</a>
 					<ul class="inner">
             <li>There are <strong>?</strong> things left to do for<strong> Last Days Modpack</strong>. <a href="1.6/incomplete.html">Click here</a> for more info.</li>
 					</ul></li>
