--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
+<link rel="shortcut icon"
+ href="/favicon.ico">
 		<title>LAST DAYS - Home</title>
 		<link rel="stylesheet" type="text/css" href="styles/common.css" media="screen"/>
 	</head>
@@ -9,46 +11,23 @@
 			<span class="head"><a href="https://github.com/sukar42/LAST_DAYS/"></a></span>
 		</div>
     <div class="page">
-      <h2>Downloads &amp; Info</h2>
-      <div class="line"></div>
-			<ul class="outer">
-				<li><a href="1.6/index.html">LAST DAYS for Minecraft 1.6</a>
-					<ul class="inner">
-            <li>Want to help complete the pack? There are <strong>6</strong> things left to do for<strong> Last Days 1.6</strong>. <a href="1.6/incomplete.html">Click here</a> for more info.</li>
-					</ul></li>
-				<li><a href="1.7/index.html">LAST DAYS for Minecraft 1.7</a>
-					<ul class="inner">
-            <li>There are <strong>2</strong> things left to do for<strong> Last Days 1.7</strong>. <a href="1.6/incomplete.html">Click here</a> for more info.</li>
-					</ul></li>
-				<li><a href="1.8/index.html">LAST DAYS for Minecraft 1.8</a>
-					<ul class="inner">
-            <li>There are <strong>8</strong> things left to do for<strong> Last Days 1.8</strong>. <a href="1.6/incomplete.html">Click here</a> for more info.</li>
-					</ul></li>
-				<li><a href="1.9/index.html">LAST DAYS for Minecraft 1.9</a>
-					<ul class="inner">
-            <li>There are <strong>20+</strong> things left to do for<strong> Last Days 1.9</strong>. <a href="1.6/incomplete.html">Click here</a> for more info.</li>
-					</ul></li>
-					<li><a href="1.10X/index.html">LAST DAYS for Minecraft 1.10</a>
-					<ul class="inner">
-            <li>There are <strong>?</strong> things left to do for<strong> Last Days 1.10</strong>. <a href="1.6/incomplete.html">Click here</a> for more info.</li>
-					</ul></li>
-				<li><a href="1.11/index.html">LAST DAYS for Minecraft 1.11/1.12</a>
-					<ul class="inner">
-            <li>There are <strong>?</strong> things left to do for<strong> Last Days 1.11/1.12</strong>. <a href="1.6/incomplete.html">Click here</a> for more info.</li>
-					</ul></li>
-				<li><a href="PE/index.html">LAST DAYS for Minecraft PE/Windows 10.</a>
-					<ul class="inner">
-            <li>There are <strong>?</strong> things left to do for<strong> Last Days PE/Windows 10</strong>. <a href="1.6/incomplete.html">Click here</a> for more info.</li>
-					</ul></li>
-				<li><a href="ModpackX/index.html">The LAST DAYS Modpacks</a>
-					<ul class="inner">
-            <li>There are <strong>?</strong> things left to do for<strong> Last Days Modpack</strong>. <a href="1.6/incomplete.html">Click here</a> for more info.</li>
-					</ul></li>
-	<li><a href="Archive/">The LAST DAYS Archived content</a>
-					<ul class="inner">
-            <li>Old, unused or forgotten files yet to be used are to be found here, includes mod textures</li>
-					</ul></li>
-			</ul>
-    </div>
+		<ul class="outer">
+		<h1>Welcome to the LAST DAYS website!</h1> 
+		<ul>	
+			<li>Read some more about the pack <a href="dummy">here</a>!</li>
+			<li>Go straight to the downloads <a href="downloads.html">here</a>!</li>
+		</ul>
+	      </div>
+		  
+		  more content to be added here
+		  
 	</body>
+	<footer>
+	<strong>Usefull links:<strong>
+	<ul class="outer">
+	<li><a href="https://www.minecraftforum.net/forums/mapping-and-modding-java-edition/resource-packs/1240079-last-days-a-lot-downloads-merry-h-i-v-e-fest">Minecraft Forum Thread</a href></li>
+	<li><a href="https://discord.gg/QDXhjWx">Our Discord Server<a href></li>
+	<li><a href="https://drive.google.com/open?id=10PtN17AQ_eluwvI0N595Oh0ggi1971th">Download Latest Release (1.12)<a href></li>
+	<li><a href="https://github.com/Gwolfski/LAST_DAYS/">Github page</a href></li>
+	</footer>
 </html>
