--- a/1.6/incomplete.html
+++ b/1.6/incomplete.html
@@ -1,5 +1,7 @@
 <!DOCTYPE HTML>
 <html>
+<link rel="shortcut icon"
+ href="/favicon.ico">
 	<head>
 		<link rel="stylesheet" type="text/css" href="../styles/common.css" media="screen">
     <title>Project Checklist</title>
@@ -79,10 +81,12 @@
       </ul></li>
     </ul>
     <p>
-      In total, 26 te      <ul class="inner">xture jobs (T), 4 sound jobs (S), 8 lore items (L), and 3 other items (O) are on the checklist. (Roughly)
+     <ul class="inner"> In total, 26 texture jobs (T), 4 sound jobs (S), 8 lore items (L), and 3 other items (O) are on the checklist. (Roughly)
     </p>
     <h4>These bugs fall to the next version!</h4>
     <p>(This list is far from complete, so please let us know on the <a href="http://www.minecraftforum.net/forums/mapping-and-modding/resource-packs/1240079">Minecraft Forum Thread</a> if you find a bug or missing textures not listed above).</p>
     </div>
+	<div class="line"></div>
+	    <ul class="outer"><li><strong><a href="../index.html">Home Page</a></strong></li></ul>
   </body>
 </html>
