--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<ul class="outer">
 		<h1>Welcome to the LAST DAYS website!</h1> 
 		<ul>	
-			<li>Read some more about the pack <a href="dummy">here</a>!</li>
+			<li>Read some more about the pack <a href="dummy.txt">here</a>!</li>
 			<li>Go straight to the downloads <a href="downloads.html">here</a>!</li>
 		</ul>
 	      </div>
