--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<div id="head">
-			<span class="head"><a href="https://github.com/sukar42/LAST_DAYS/"></a></span>
+			<span class="head"><a href="https://github.com/Gwolfski/LAST_DAYS/"></a></span>
 		</div>
     <div class="page">
 		<ul class="outer">
