--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<ul>	
 			<li>Read some more about the pack <a href="dummy.txt">here</a>!</li>
 			<li>Go straight to the downloads <a href="downloads.html">here</a>!</li>
-			<li>We have a server! Read about it <a href="dummy.txt">here</a>!</li>
+			<li>We have a server! Read about it <a href="server/info.html">here</a>!</li>
 		</ul>
 	      </div>
 		  
