--- a/server/info.html
+++ b/server/info.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>LAST DAYS Server</title>
+		<link rel="stylesheet" type="text/css" href="../styles/common.css" media="screen"/>
+	</head>
+	<body>
+		<div id="head">
+			<span class="head"><a href="https://github.com/Gwolfski/LAST_DAYS/"></a></span>
+		</div>
+ <div class="page">
+	  <h2>Our Server</h2>
+<div class="line"></div>
+   We have a minecraft server dedicated to this pack. It is run by Gwolfski, and aims to provide an immersive world in which to enjoy Last Days with your friends and enemies alike. The server currently runs Minecraft Version 1.12.2, and the IP is 37.187.150.162:27129
+    </div>
+  </body>
+</html>
+  
