--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 			<span class="head"><a href="https://github.com/Gwolfski/LAST_DAYS/"></a></span>
 		</div>
     <div class="page">
+	    <div class="line"></div>
 		<ul class="outer">
 		<h1>Welcome to the LAST DAYS website!</h1> 
 		<ul>	
@@ -23,6 +24,7 @@
 		  more content to be added here
 		  
 	</body>
+		<div class="line"></div>
 	<footer>
 	<strong>Usefull links:<strong>
 	<ul class="outer">
