--- a/server/info.html
+++ b/server/info.html
@@ -13,6 +13,7 @@
 <div class="line"></div>
    We have a minecraft server dedicated to this pack. It is run by Gwolfski, and aims to provide an immersive world in which to enjoy Last Days with your friends and enemies alike. The server currently runs Minecraft Version 1.12.2, and the IP is 37.187.150.162:27129
     </div>
+		 <ul class="outer"><li><strong><a href="index.html">Home Page</a></strong></li></ul>
   </body>
 </html>
   
