--- a/server/info.html
+++ b/server/info.html
@@ -11,9 +11,12 @@
  <div class="page">
 	  <h2>Our Server</h2>
 <div class="line"></div>
-   We have a minecraft server dedicated to this pack. It is run by Gwolfski, and aims to provide an immersive world in which to enjoy Last Days with your friends and enemies alike. The server currently runs Minecraft Version 1.12.2, and the IP is 46.105.209.206
+   We have a minecraft server dedicated to this pack. It is run by Gwolfski, and aims to provide an immersive world in which to enjoy Last Days with your friends and enemies alike. The server currently runs Minecraft Version 1.12.2, and the IP is 178.32.188.66. It requires a small addon, found below, because of slight diffrences in the main pack.
     </div>
-		 <ul class="outer"><li><strong><a href="../index.html">Home Page</a></strong></li></ul>
+
+		<ul class="outer"><li><strong><a href="link">Addon needed for server</a></strong></li><ul>
+			
+	         <ul class="outer"><li><strong><a href="../index.html">Home Page</a></strong></li></ul>
   </body>
 </html>
   
