--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 	<footer>
 	<strong>Usefull links:<strong>
 	<ul class="outer">
-	<li><a href="https://www.minecraftforum.net/forums/mapping-and-modding-java-edition/resource-packs/1240079-last-days-a-lot-downloads-merry-h-i-v-e-fest">Minecraft Forum Thread</a href></li>
-	<li><a href="https://discord.gg/QDXhjWx">Our Discord Server<a href></li>
-	<li><a href="https://drive.google.com/open?id=10PtN17AQ_eluwvI0N595Oh0ggi1971th">Download Latest Release (1.12)<a href></li>
-	<li><a href="https://github.com/Gwolfski/LAST_DAYS/">Old Github page</a href></li>
-	<li><a href="https://github.com/sukar42/The_Last_Days_Resource_Pack/">New Github page</a href></li>
+	<li><a href="https://www.minecraftforum.net/forums/mapping-and-modding-java-edition/resource-packs/1240079-last-days-a-lot-downloads-merry-h-i-v-e-fest">Minecraft Forum Thread</a></li>
+	<li><a href="https://discord.gg/QDXhjWx">Our Discord Server</a></li>
+	<li><a href="https://drive.google.com/open?id=10PtN17AQ_eluwvI0N595Oh0ggi1971th">Download Latest Release (1.12)</a></li>
+	<li><a href="https://github.com/Gwolfski/LAST_DAYS/">Old Github page</a></li>
+	<li><a href="https://github.com/sukar42/The_Last_Days_Resource_Pack/">New Github page</a></li>
 	</footer>
 </html>
