--- a/index.html
+++ b/index.html
@@ -1,37 +1,28 @@
-<!DOCTYPE html>
-<html>
-	<head>
-<link rel="shortcut icon"
- href="/favicon.ico">
-		<title>LAST DAYS - Home</title>
-		<link rel="stylesheet" type="text/css" href="styles/common.css" media="screen"/>
-	</head>
-	<body>
-		<div id="head">
-			<span class="head"><a href="https://github.com/Gwolfski/LAST_DAYS/"></a></span>
-		</div>
-    <div class="page">
-	    <div class="line"></div>
-		<ul class="outer">
-		<h1>Welcome to the LAST DAYS website!</h1> 
-		<ul>	
-			<li>Read some more about the pack <a href="dummy.txt">here</a>!</li>
-			<li>Go straight to the downloads <a href="downloads.html">here</a>!</li>
-			<li>We have a server! Read about it <a href="server/info.html">here</a>!</li>
-		</ul>
-	      </div>
-		  
-		  more content to be added here
-		  
-	</body>
-		<div class="line"></div>
-	<footer>
-	<strong>Usefull links:<strong>
-	<ul class="outer">
-	<li><a href="https://www.minecraftforum.net/forums/mapping-and-modding-java-edition/resource-packs/1240079-last-days-a-lot-downloads-merry-h-i-v-e-fest">Minecraft Forum Thread</a></li>
-	<li><a href="https://discord.gg/QDXhjWx">Our Discord Server</a></li>
-	<li><a href="https://drive.google.com/open?id=10PtN17AQ_eluwvI0N595Oh0ggi1971th">Download Latest Release (1.12)</a></li>
-	<li><a href="https://github.com/Gwolfski/LAST_DAYS/">Old Github page</a></li>
-	<li><a href="https://github.com/sukar42/The_Last_Days_Resource_Pack/">New Github page</a></li>
-	</footer>
-</html>
+<p>&nbsp;</p>
+<p> </p>
+<div id="head">&nbsp;</div>
+<div class="page">
+<div class="line">&nbsp;</div>
+<h1>Welcome to the LAST DAYS website!</h1>
+<ul class="outer">
+<ul>
+<li>Read some more about the pack <a href="dummy.txt">here</a>!</li>
+<li>Go straight to the downloads <a href="downloads.html">here</a>!</li>
+<li>We have a server! Read about it <a href="server/info.html">here</a>!</li>
+</ul>
+</ul>
+</div>
+<p>more content to be added here</p>
+<div>
+<div class="line">&nbsp;</div>
+</div>
+<div><footer><strong><strong>Usefull links:</strong></strong>
+<ul class="outer">
+<li><a href="https://www.minecraftforum.net/forums/mapping-and-modding-java-edition/resource-packs/1240079-last-days-a-lot-downloads-merry-h-i-v-e-fest">Minecraft Forum Thread</a></li>
+<li><a href="https://discord.gg/QDXhjWx">Our Discord Server</a></li>
+<li><a href="https://drive.google.com/open?id=10PtN17AQ_eluwvI0N595Oh0ggi1971th">Download Latest Release (1.12)</a></li>
+<li><a href="https://github.com/Gwolfski/LAST_DAYS/">Old Github page</a></li>
+<li><a href="https://github.com/sukar42/The_Last_Days_Resource_Pack/">New Github page</a></li>
+</ul>
+<p><iframe src="https://discordapp.com/widget?id=196530164513898497&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe></p>
+</footer></div>
