--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
-<p>&nbsp;</p>
-<p> </p>
+<!DOCTYPE html>
+<html>
+	<head>
+<link rel="shortcut icon"
+ <href="/favicon.ico">
+		<title>LAST DAYS - Home</title>
+		<link rel="stylesheet" type="text/css" href="styles/common.css" media="screen"/>
+	</head>
+	<body>
+		<div id="head">
+	<span class="head"><a href="https://github.com/Gwolfski/LAST_DAYS/"></a></span>
+		</div>
 <div id="head">&nbsp;</div>
 <div class="page">
 <div class="line">&nbsp;</div>
