--- a/downloads.html
+++ b/downloads.html
@@ -53,6 +53,6 @@
 			</ul>
     </div>
 	<div class="line"></div>
-	    <ul class="outer"><li><strong><a href="index.html">Home Page</a></strong></li></ul>
+	    <ul class="outer"><li><strong><a href="index.html"><button class="button_normal">Home Page</button></a></strong></li></ul>
 	</body>
 </html>
