--- a/index.html
+++ b/index.html
@@ -15,13 +15,17 @@
 <div class="line">&nbsp;</div>
 <h1>Welcome to the LAST DAYS website!</h1>
 <ul class="outer">
-<ul>
+<!--<ul>
 <li>Read some more about the pack <a href="dummy.txt">here</a>!</li>
 <li>Go straight to the downloads <a href="downloads.html">here</a>!</li>
 <li>We have a server! Read about it <a href="server/info.html">here</a>!</li>
-</ul>
+</ul>-->
 </ul>
 </div>
+<div class="center">
+<a href="info/info.html"><button class="button1">Pack Info</button class="button1"></a><a href="downloads.html">   <button class="button1">Downloads</button class="button1"></a>   <a href="server/info.html"><button class="button1">Official Server</button class="button1"></a> 
+</div>
+
 <p>more content to be added here</p>
 <div>
 <div class="line">&nbsp;</div>
