--- a/1.11/index.html
+++ b/1.11/index.html
@@ -12,7 +12,7 @@
       <h2>LAST DAYS for Minecraft 1.11/1.12</h2>
       <div class="line"></div>
       <ul class="outer">
-        <li><strong>Standard</strong> <i>(<a href="https://github.com/Gwolfski/LAST_DAYS/releases/tag/1.12-0.3">Github</a> - <a href="https://drive.google.com/open?id=10PtN17AQ_eluwvI0N595Oh0ggi1971th">Google Drive</a>) - ~34 MB</i>
+        <li><strong>Standard</strong> <i>(<a href="https://github.com/sukar42/The_Last_Days_Resource_Pack/releases/tag/0.0.1">Github</a> - <a href="https://drive.google.com/open?id=10PtN17AQ_eluwvI0N595Oh0ggi1971th">Google Drive</a>) - ~34 MB</i>
 				<ul class="inner">
           <li><i>Still incomplete. Click <a href="../1.6/incomplete.html">here</a> to see what still needs to be done. If you wish to help maintain/update the pack, visit the official <a href="http://www.minecraftforum.net/forums/mapping-and-modding/resource-packs/1240079">Minecraft Forum Thread</a> and discuss it there.</i></li>
           <li><i>Contains textures, sound effects, language files, and texts (end credits, splashes)</i></li>
