--- a/downloads.html
+++ b/downloads.html
@@ -3,7 +3,7 @@
 	<head>
 	<link rel="shortcut icon"
  href="/favicon.ico">
-		<title>LAST DAYS - Downloads</title>
+		<title>LAST DAYS - Archived Downloads</title>
 		<link rel="stylesheet" type="text/css" href="styles/common.css" media="screen"/>
 	</head>
 	<body>
@@ -11,7 +11,7 @@
 			<span class="head"><a href="https://github.com/sukar42/LAST_DAYS/"></a></span>
 		</div>
     <div class="page">
-	  <h2>Downloads</h2>
+	  <h2>Archived Downloads</h2>
       <div class="line"></div>
 			<ul class="outer">
 				<li><a href="1.6/index.html">LAST DAYS for Minecraft 1.6</a>
@@ -46,13 +46,13 @@
 					<ul class="inner">
             <li>There are <strong>?</strong> things left to do for<strong> Last Days Modpack</strong>. <a href="1.6/incomplete.html">Click here</a> for more info.</li>
 					</ul></li>
-	<li><a href="Archive/">The LAST DAYS Archived content</a>
+	<li><a href="Archive/index.html">The LAST DAYS Archived content</a>
 					<ul class="inner">
             <li>Old, unused or forgotten files yet to be used are to be found here, includes mod textures</li>
 					</ul></li>
 			</ul>
     </div>
 	<div class="line"></div>
-	    <ul class="outer"><li><strong><a href="index.html"><button class="button_normal">Home Page</button></a></strong></li></ul>
+	    <ul class="outer"><li><strong><a href="index.html"><button class="button_normal">Home Page</button></a></strong>strong><a href="downlaods2018.html"><button class="button_normal">Back</button></a></strong></li></ul>
 	</body>
 </html>
