--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </ul>
 </div>
 <div class="center">
-<a href="info/info.html"><button class="button1">Pack Info</button class="button1"></a><a href="downloads.html">   <button class="button1">Downloads</button class="button1"></a>   <a href="server/info.html"><button class="button1">Official Server</button class="button1"></a> 
+<a href="info/info.html"><button class="button1">Pack Info</button class="button1"></a><a href="downloads2018.html">   <button class="button1">Downloads</button class="button1"></a>   <a href="server/info.html"><button class="button1">Official Server</button class="button1"></a> 
 </div>
 
 <p>more content to be added here</p>
