--- a/1.13/index.html
+++ b/1.13/index.html
@@ -19,7 +19,7 @@
           <li class="warning"><i>Requires <a href="http://optifine.net/downloads">Optifine</a> for the full experience.</i></li>
           <li>Want the latest version and don't care if there's bugs? <a href="https://github.com/Gwolfski/The_Last_Days_Resource_Pack/tree/1.13">GitHub</a> (Note: You must extract the folder inside into the Resource Packs folder. You cannot use the zip directly.)</li>
 				</ul></li>
-			<li><strong>Music Add-On</strong> <i>(<a href="http://www.mediafire.com/download/wg99iu4w6adp07l/LAST_DAYS_(Music_Add-On).zip">Mediafire</a> - <a href="https://mega.co.nz/#!1dVSxYLD!VhAdn_bETmbqsg1pFmuv3f6GIXPDEK3ry4vE2JkszQY">MEGA</a>) - 103.75 MB</i>
+			<li><strong>Music Add-On</strong> <i>(<a href="http://www.mediafire.com/file/2316z03bj0r1h8f/The_Teknoaxe_MusicPack_1.12.zip">Mediafire</a> ~133 MB</i>
       <ul class="inner">
 				<li>Contains only the <strong>music files</strong> for LAST DAYS. Separate due to size. <b>It says it's old, but it will still load</b></li>
 				<li>Music by <a href="http://teknoaxe.com/">TeknoAXE</a>. See credits <a href="../1.6/credits/music.html">here</a>.</li>
