--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <ul class="outer">
 <li><a href="https://www.minecraftforum.net/forums/mapping-and-modding-java-edition/resource-packs/1240079-last-days-a-lot-downloads-merry-h-i-v-e-fest">Minecraft Forum Thread</a></li>
 <li><a href="https://discord.gg/QDXhjWx">Our Discord Server</a></li>
-<li><a href="https://drive.google.com/open?id=10PtN17AQ_eluwvI0N595Oh0ggi1971th">Download Latest Release (1.12)</a></li>
+<li><a href="1.13/index.html">Download Latest Release (1.13.1)</a></li>
 <li><a href="https://github.com/Gwolfski/LAST_DAYS/">Old Github page</a></li>
 <li><a href="https://github.com/sukar42/The_Last_Days_Resource_Pack/">New Github page</a></li>
 </ul>
