update for title

--- a/downloads2018.html
+++ b/downloads2018.html
@@ -14,6 +14,11 @@
 	  <h1>Downloads</h1>
       <div class="line"></div>
 			<ul class="outer">
+			<ul class="outer">
+				<li><a href="https://minecraft.curseforge.com/projects/last-days">LAST DAYS for Minecraft 1.12.2</a>
+					<ul class="inner">
+            <li>Want to help complete the pack? There are <strong>many</strong> things left to do for<strong> Last Days 1.12.2</strong>. <a href="1.13.1/incomplete.html">Click here</a> for more info.</li>
+					</ul></li>
 				<li><a href="1.13/index.html">LAST DAYS for Minecraft 1.13.1</a>
 					<ul class="inner">
             <li>Want to help complete the pack? There are <strong>many</strong> things left to do for<strong> Last Days 1.13.1</strong>. <a href="1.13.1/incomplete.html">Click here</a> for more info.</li>
