--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 	</head>
 	<body>
 		<div id="head">
-	<span class="head"><a href="https://github.com/Gwolfski/LAST_DAYS/"></a></span>
+	<span class="head"><a href="https://github.com/sukar42/The_Last_Days_Resource_Pack/"></a></span>
 		</div>
 <div id="head">&nbsp;</div>
 <div class="page">
 <div class="line">&nbsp;</div>
-<h1>Welcome to the LAST DAYS website!</h1>
+<div align="center"><h1>Welcome to the LAST DAYS website!</h1></div>
+<div align="center"><img src="https://i.imgur.com/nUiXToq.png" alt="" width="1402" height="401"></div>
 <ul class="outer">
 <!--<ul>
 <li>Read some more about the pack <a href="dummy.txt">here</a>!</li>
@@ -35,8 +36,8 @@
 <li><a href="https://www.minecraftforum.net/forums/mapping-and-modding-java-edition/resource-packs/1240079-last-days-a-lot-downloads-merry-h-i-v-e-fest">Minecraft Forum Thread</a></li>
 <li><a href="https://discord.gg/QDXhjWx">Our Discord Server</a></li>
 <li><a href="1.13/index.html">Download Latest Release (1.13.1)</a></li>
-<li><a href="https://github.com/Gwolfski/LAST_DAYS/">Old Github page</a></li>
-<li><a href="https://github.com/sukar42/The_Last_Days_Resource_Pack/">New Github page</a></li>
+<li><a href="https://github.com/sukar42/The_Last_Days_Resource_Pack/">The Github</a></li>
+<li><a href="https://github.com/Gwolfski/The_Last_Days_Resource_Pack/tree/1.13">Gwolfski's Github</a></li>
 </ul>
 <p><iframe src="https://discordapp.com/widget?id=196530164513898497&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe></p>
 </footer></div>
