--- a/downloads2018.html
+++ b/downloads2018.html
@@ -37,6 +37,6 @@
 	<li><a href="https://resourcepack.net/last-days-resource-pack/">Resourcepack.net</a>
 	</div>
 	<div class="line"></div>
-	    <ul class="outer"><li><strong><a href="index.html"><button class="button_normal">Home Page</button></a></strong></li></ul>
+	    <ul class="outer"><li><strong><a href="index.html"><button class="button_normal">Home Page</button></a></strong></li></ul><ul class="outer"><li><strong><a href="log.html"><button class="button_normal">Update log</button></a></strong></li></ul>
 	</body>
 </html>
