--- a/log.html
+++ b/log.html
@@ -4,13 +4,12 @@
 <link rel="shortcut icon"
  <href="/favicon.ico">
 		<title>LAST DAYS - Update Log</title>
-
+		<link rel="stylesheet" type="text/css" href="../styles/common.css" media="screen"/></head>
 <div id="head">&nbsp;</div>
 <div class="page">
 <div class="line">&nbsp;</div>
 <div align="center"><h1>Welcome to the LAST DAYS update log!</h1></div>
 <ul class="outer">
-<!--<ul>
 <li>**Start of log**
 <li> 24/9/2018 - New 1.13.1 version
 
