--- a/log.html
+++ b/log.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-<link rel="shortcut icon"
- <href="/favicon.ico">
-		<title>LAST DAYS - Update Log</title>
-		<link rel="stylesheet" type="text/css" href="../styles/common.css" media="screen"/></head>
+		<title>LAST DAYS Update log</title>
+		<link rel="stylesheet" type="text/css" href="../styles/common.css" media="screen"/>
+	</head>
 <div id="head">&nbsp;</div>
 <div class="page">
 <div class="line">&nbsp;</div>
@@ -12,7 +11,10 @@
 <ul class="outer">
 <li>**Start of log**
 <li> 24/9/2018 - New 1.13.1 version
-
+<li>
+<li>
+<li>
+<li>
 
 <ul class="outer"><li><strong><a href="index">Home Page</a></strong></li><li><strong><a href="downloads2018.html">Downloads</a></strong></li></ul>
 	</body>
