--- a/log.html
+++ b/log.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>LAST DAYS Update log</title>
-		<link rel="stylesheet" type="text/css" href="../styles/common.css" media="screen"/>
+		<link rel="stylesheet" type="text/css" href="/styles/common.css" media="screen"/>
 	</head>
 <div id="head">&nbsp;</div>
 <div class="page">
