--- a/server/info.html
+++ b/server/info.html
@@ -11,7 +11,9 @@
  <div class="page">
 	  <h2>Our Server</h2>
 <div class="line"></div>
-   We have a minecraft server dedicated to this pack. It is run by Gwolfski, and aims to provide an immersive world in which to enjoy Last Days with your friends and enemies alike. The server currently runs Minecraft Version 1.12.2, and the IP is 178.32.188.66. It requires a small addon, found below, because of slight diffrences in the main pack.
+  <s> We have a minecraft server dedicated to this pack. It is run by Gwolfski, and aims to provide an immersive world in which to enjoy Last Days with your friends and enemies alike. The server currently runs Minecraft Version 1.12.2, and the IP is 178.32.188.66. It requires a small addon, found below, because of slight diffrences in the main pack.</s>
+	 <p>
+		 <b> SERVER CURRENTLY UNDER CONSTRUCTION, this page will be updated when it's ready.</b>
     </div>
 
 		<ul class="outer"><li><strong><a href="https://drive.google.com/open?id=1xDzBVEsm2TbPakWic5paQaDXBTz9HxNX">Addon needed for server</a></strong></li>
