--- a/server/info.html
+++ b/server/info.html
@@ -16,7 +16,7 @@
 		 <b> SERVER CURRENTLY UNDER CONSTRUCTION, this page will be updated when it's ready.</b>
     </div>
 
-		<ul class="outer"><li><strong><a href="https://drive.google.com/open?id=1xDzBVEsm2TbPakWic5paQaDXBTz9HxNX">Addon needed for server</a></strong></li>
+		<ul class="outer"><li><s><strong><a href="https://drive.google.com/open?id=1xDzBVEsm2TbPakWic5paQaDXBTz9HxNX">Addon needed for server</a></strong></s></li>
 			<li><strong><a href="https://discord.gg/7Br977Q">Server Discord</a></strong></li>
 		</ul>
 			
