--- a/1.13/index.html
+++ b/1.13/index.html
@@ -12,7 +12,7 @@
       <h2>LAST DAYS for Minecraft 1.13.1</h2>
       <div class="line"></div>
       <ul class="outer">
-        <li><strong>Standard</strong> <i>(<a href="https://github.com/sukar42/The_Last_Days_Resource_Pack/tree/1.13">Github</a> - <a href="https://drive.google.com/open?id=10vDkXa-gK0eZ9iTKIyJ2kCaRBCygtFOS">Google Drive</a>) - ~36 MB</i>
+        <li><strong>Standard</strong> <i>(<a href="https://github.com/sukar42/The_Last_Days_Resource_Pack/tree/1.13">Github</a> - <a href="https://drive.google.com/uc?export=download&id=10vDkXa-gK0eZ9iTKIyJ2kCaRBCygtFOS">Google Drive</a>) - ~36 MB</i>
 				<ul class="inner">
           <li><i>Still incomplete. Click <a href="incomplete.html">here</a> to see what still needs to be done. If you wish to help maintain/update the pack, visit the official <a href="http://www.minecraftforum.net/forums/mapping-and-modding/resource-packs/1240079">Minecraft Forum Thread</a> and discuss it there.</i></li>
           <li><i>Contains textures, sound effects, language files, and texts (end credits, splashes)</i></li>
