--- a/log.html
+++ b/log.html
@@ -10,8 +10,8 @@
 <div align="center"><h1>Welcome to the LAST DAYS update log!</h1></div>
 <ul class="outer">
 <li>**Start of log**
-<li> 24/9/2018 - New 1.13.1 version
-<li>
+<li> 24/09/2018 - New 1.13.1 version
+<li> 29/10/2018 - New 1.31.2 version + optifine fixes
 <li>
 <li>
 <li>
