--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
 <ul class="outer">
 <li><a href="https://www.minecraftforum.net/forums/mapping-and-modding-java-edition/resource-packs/1240079-last-days-a-lot-downloads-merry-h-i-v-e-fest">Minecraft Forum Thread</a></li>
 <li><a href="https://discord.gg/QDXhjWx">Our Discord Server</a></li>
-<li><a href="1.13/index.html">Download Latest Release (1.13.1)</a></li>
-<li><a href="https://github.com/sukar42/The_Last_Days_Resource_Pack/">The Github</a></li>
+<li><a href="1.14/index.html">Download Latest Release (1.14)</a></li>
+<li><a href="https://github.com/krulunio/last_days_1.14">Current (Krulunio's) Github</a></li>
+<li><a href="https://github.com/sukar42/The_Last_Days_Resource_Pack/">The pre 1.14 Github</a></li>
 <li><a href="https://github.com/Gwolfski/The_Last_Days_Resource_Pack/tree/1.13">Gwolfski's Github</a></li>
 </ul>
 <p><iframe src="https://discordapp.com/widget?id=196530164513898497&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe></p>
