--- a/downloads2018.html
+++ b/downloads2018.html
@@ -23,6 +23,18 @@
 					<ul class="inner">
             <li>Want to help complete the pack? There are <strong>many</strong> things left to do for<strong> Last Days 1.13.2</strong>. <a href="1.13/incomplete.html">Click here</a> for more info.</li>
 					</ul></li>
+				<li><a href="1.14/index.html">LAST DAYS for Minecraft 1.14.x</a>
+					<ul class="inner">
+            <li>Want to help complete the pack? There are <strong>many</strong> things left to do for<strong> Last Days 1.14</strong>. <a href="1.13/incomplete.html">Click here</a> for more info.</li>
+					</ul></li>
+			<li><a href="1.16/index.html">LAST DAYS for Minecraft 1.15.x</a>
+					<ul class="inner">
+            <li>Want to help complete the pack? There are <strong>many</strong> things left to do for<strong> Last Days 1.15</strong>. <a href="1.13/incomplete.html">Click here</a> for more info.</li>
+					</ul></li>
+			<li><a href="1.16/index.html">LAST DAYS for Minecraft 1.16.x</a>
+					<ul class="inner">
+            <li>Want to help complete the pack? There are <strong>many</strong> things left to do for<strong> Last Days 1.16.x</strong>. <a href="1.13/incomplete.html">Click here</a> for more info.</li>
+					</ul></li>
 	<li><a href="downloads.html">The LAST DAYS Archived content</a>
 					<ul class="inner">
             <li><b>Older versions</b> as well as old, unused or forgotten files yet to be used are to be found here, includes mod textures</li>
